Fixing bugs and refactoring

--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -4,7 +4,7 @@
     <string name="black_panther_title">Чёрная Пантера</string>
     <string name="black_panther_details">С первого взгляда можно решить, что Ваканда - обычная территория дикой Африки, но это не так. Здесь, в недрах пустынных земель, скрываются залежи уникального металла, способного поглощать вибрацию. Многие пытались добраться до него, разоряя всё на своём пути и принося смерть аборигенам, но каждый раз таинственный дух саванны - Чёрная Пантера - вставал на защиту угнетённых.  Спустя много лет беда снова приходит в Ваканду, и в этот раз враг заручился поддержкой современных технологий. Когда шансов почти не остаётся, Т\'Чалла, молодой принц Ваканды, узнаёт, что именно ему предстоит возродить легенду и продолжить вечную борьбу, надев маску Чёрной Пантеры.</string>
     <string name="goonies_title">Балбесы</string>
-    <string name="goonies_description">Команда маленьких героев пускается в самое опасное в их жизни путешествие! Они ищут сокровища, которые спрятал 300 лет назад пират Одноглазый Уилли. \n\nС помощью найденной на чердаке таинственной карты они спускаются в подземный мир глубоких пещер, опасных ловушек, чтобы найти пиратский галеон, полный золотых дублонов. Но самая большая опасность уже наступает им на пятки: это - банда злодеев... и загадочный монстр!</string>
+    <string name="goonies_description">Команда маленьких героев пускается в самое опасное в их жизни путешествие! Они ищут сокровища, которые спрятал 300 лет назад пират Одноглазый Уилли. \n\nС помощью найденной на чердаке таинственной карты они спускаются в подземный мир глубоких пещер, опасных ловушек, чтобы найти пиратский галеон, полный золотых дублонов. Но самая большая опасность уже наступает им на пятки: это - банда злодеев… и загадочный монстр!</string>
     <string name="starwars7_title">Звёздные войны: Пробуждение силы</string>
     <string name="starwars7_details">Через тридцать лет после гибели Дарта Вейдера и Императора галактика по-прежнему в опасности. Государственное образование Первый Орден во главе с таинственным верховным лидером Сноуком и его правой рукой Кайло Реном идёт по стопам Империи, пытаясь захватить всю власть. В это нелёгкое время судьба сводит юную девушку Рей и бывшего штурмовика Первого Ордена Финна с героями войны с Империей - Ханом Соло, Чубаккой и генералом Леей. Вместе они должны дать бой Первому Ордену, однако настаёт тот момент, когда становится очевидно, что лишь джедаи могут остановить Сноука и Кайло Рена.</string>
     <string name="btn_details">Детали</string>
@@ -17,4 +17,11 @@
     <string name="snackbar_favorites_removed">Фильм убран из избранного</string>
     <string name="snackbar_favorites_added">Фильм добавлен в избранное</string>
     <string name="undo">Отменить</string>
+    <string name="default_network_error_msg">Не удалось получить данные</string>
+    <string name="retry">Повторить</string>
+    <string name="notificationChannelName">Посмотреть позже</string>
+    <string name="notificationChannelDescription">Получать напоминания о запланированном просмотре фильма</string>
+    <string name="timePickerTitle">Время напоминания</string>
+    <string name="dateDialogTitle">Дата напоминания</string>
+    <string name="movieDescriptionError">Не удалось загрузить детальную информацию о фильме. Пожалуйста, попробуйте позже.</string>
 </resources>
